<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.add.vpn.MainActivity">
    <item
        android:id="@+id/error_settings"
        android:checkable="true"
        android:checked="false"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/errorEnable"
        app:showAsAction="never" />
    <item
            android:checkable="true"
        android:checked="false"
        android:enabled="true"
        android:orderInCategory="100"
        android:title="@string/alarmEnable"
        app:showAsAction="never"
        android:visible="false"/>
    <item
            android:checkable="false"
        android:checked="false"
        android:enabled="true"
        android:orderInCategory="200"
        android:title="@string/max_power"
        app:showAsAction="never"
        android:visible="false"/>
</menu>