<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.MainFragment"
        android:orientation="vertical"
        android:id="@+id/linearLayout">


    <com.add.vpn.view.ChartView
            android:id="@+id/cv_avgTemp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:timeUnit="Сек"
            app:valueUnit="°C"
            app:description="Цилиндры"
            app:isAvg="false"
            app:layout_constraintTop_toBottomOf="@id/wat"
            app:layout_constraintBottom_toTopOf="@id/soundOff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="5dp"
            app:valueMarker="390"
            app:isAutoScale="false"
            />

<!--    app:layout_constraintBottom_toTopOf="@id/soundOff"-->
<!--    app:layout_constraintHorizontal_bias="1.0"-->



    <!--    <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/dataListView"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="0dp"-->
<!--            android:keepScreenOn="true"-->
<!--            app:layout_constraintTop_toBottomOf="@id/wat"-->
<!--            app:layout_constraintBottom_toTopOf="@id/soundOff"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            android:layout_marginHorizontal="1dp"-->
<!--            app:layout_constraintHorizontal_bias="1.0"/>-->

    <Button
            android:id="@+id/on_off"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_regulateOn"
            android:enabled="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/alarmCH4"
            app:layout_constraintBottom_toBottomOf="@id/alarmCH4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/soundOff"
            android:layout_marginHorizontal="2dp"/>
<!--    app:layout_constraintTop_toBottomOf="@id/cv_avgTemp"-->

    <Button
            android:id="@+id/soundOff"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_soundOff"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/alarmCH4"
            app:layout_constraintEnd_toStartOf="@id/alarmCH4"
            app:layout_constraintBottom_toBottomOf="@id/alarmCH4"
            app:layout_constraintStart_toEndOf="@id/on_off"
            android:layout_marginHorizontal="2dp"
            android:fontFamily="@font/metal_mania"
            android:enabled="false"/>
    <Button
            android:id="@+id/alarmCH4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/alarmCH4enable"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/soundOff"
            android:layout_marginHorizontal="2dp"
            android:fontFamily="@font/metal_mania"
            android:enabled="false"/>
<!--    app:layout_constraintTop_toBottomOf="@id/cv_avgTemp"-->


    <com.add.vpn.view.AnalogView
            android:id="@+id/wat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kw"
            app:maxValue="1700"
            app:value="0"
            app:markRange="20"
            app:markRangeText="200"
            app:markRangeLong="100"
            app:textColor="@color/white"
            app:isInteger="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/opMetr"
            app:layout_constraintBottom_toBottomOf="@id/opMetr"
            android:layout_margin="2dp"
            app:isRedStart="false"/>



    <com.add.vpn.view.AnalogView
            android:id="@+id/opMetr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kPa"
            app:textColor="@color/white"
            app:maxValue="20"
            app:value="0"
            app:markRange="1"
            app:markRangeText="2"
            app:markRangeLong="2"
            app:isInteger="false"
            app:layout_constraintBottom_toBottomOf="@id/wat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/wat"
            android:layout_margin="2dp"
            app:isRedStart="true"/>



</androidx.constraintlayout.widget.ConstraintLayout>